tests/snapshots/test_nom_from_file__output.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: "Problem name: ClpDefaultName"
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - var_name: x0
        coefficient: 5
      - var_name: x1
        coefficient: 3
      - var_name: x2
        coefficient: 2
      - var_name: x3
        coefficient: 7
      - var_name: x4
        coefficient: 4
constraints:
  cons0:
    type: Standard
    name: cons0
    coefficients:
      - var_name: x0
        coefficient: 2
      - var_name: x1
        coefficient: 8
      - var_name: x2
        coefficient: 4
    operator: LTE
    rhs: 10
  cons1:
    type: Standard
    name: cons1
    coefficients:
      - var_name: x3
        coefficient: 2
      - var_name: x4
        coefficient: 5
    operator: LTE
    rhs: 11
variables:
  x0:
    name: x0
    var_type:
      DoubleBound:
        - 0
        - 1
  x1:
    name: x1
    var_type:
      DoubleBound:
        - 0
        - 1
  x2:
    name: x2
    var_type:
      DoubleBound:
        - 0
        - 1
  x3:
    name: x3
    var_type:
      DoubleBound:
        - 0
        - 1
  x4:
    name: x4
    var_type:
      DoubleBound:
        - 0
        - 1
