tests/snapshots/test_nom_from_file__output2_1.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: "Problem name: ClpDefaultName"
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - var_name: x0
        coefficient: 2.1
      - var_name: x1
        coefficient: 1000
      - var_name: x2
        coefficient: 2.2
      - var_name: x3
        coefficient: 1000
      - var_name: x4
        coefficient: 2.3
      - var_name: x5
        coefficient: 1000
constraints:
  cons0:
    type: Standard
    name: cons0
    coefficients:
      - var_name: x0
        coefficient: 1
      - var_name: x1
        coefficient: 1
    operator: LTE
    rhs: 21.1
  cons0_low:
    type: Standard
    name: cons0_low
    coefficients:
      - var_name: x0
        coefficient: 1
      - var_name: x1
        coefficient: 1
    operator: GTE
    rhs: 0
  cons1:
    type: Standard
    name: cons1
    coefficients:
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 1
    operator: LTE
    rhs: 22.2
  cons1_low:
    type: Standard
    name: cons1_low
    coefficients:
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 1
    operator: GTE
    rhs: 0
  cons2:
    type: Standard
    name: cons2
    coefficients:
      - var_name: x4
        coefficient: 1
      - var_name: x5
        coefficient: 1
    operator: LTE
    rhs: 23.3
  cons2_low:
    type: Standard
    name: cons2_low
    coefficients:
      - var_name: x4
        coefficient: 1
      - var_name: x5
        coefficient: 1
    operator: GTE
    rhs: 0
variables:
  x0:
    name: x0
    var_type:
      DoubleBound:
        - 0
        - 21.1
  x1:
    name: x1
    var_type: Free
  x2:
    name: x2
    var_type:
      DoubleBound:
        - 0
        - 22.2
  x3:
    name: x3
    var_type: Free
  x4:
    name: x4
    var_type:
      DoubleBound:
        - 0
        - 23.3
  x5:
    name: x5
    var_type: Free
